Adds social media sharing meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- Social tags -->
+    <meta property="og:url" content="https://flashee.lilley.io">
+    <meta property="og:site_name" content="Flashee">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Flashee">
+    <meta property="og:image" content="https://flashee.lilley.io/img/icons/android-chrome-512x512.png">
+    <meta property="og:description" content="The free and simple flash card app">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="https://flashee.lilley.io">
+    <meta name="twitter:title" content="Flashee">
+    <meta name="twitter:description" content="The free and simple flash card app">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="twitter:creator" content="@mklilley">
+    <meta name="twitter:image:src" content="https://flashee.lilley.io/img/icons/android-chrome-512x512.png">
+    <meta itemprop="name" content="Flashee">
+    <meta itemprop="description" content="The free and simple flash card app">
+    <meta itemprop="image" content="https://flashee.lilley.io/img/icons/android-chrome-512x512.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
