Changing social sharing image

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="Flashee">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Flashee">
-    <meta property="og:image" content="https://flashee.lilley.io/img/icons/android-chrome-512x512.png">
+    <meta property="og:image" content="https://flashee.lilley.io/flashee-social.png">
     <meta property="og:description" content="The free and simple flash card app">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://flashee.lilley.io">
@@ -18,10 +18,10 @@
     <meta name="twitter:description" content="The free and simple flash card app">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="twitter:creator" content="@mklilley">
-    <meta name="twitter:image:src" content="https://flashee.lilley.io/img/icons/android-chrome-512x512.png">
+    <meta name="twitter:image:src" content="https://flashee.lilley.io/img/flashee-social.png">
     <meta itemprop="name" content="Flashee">
     <meta itemprop="description" content="The free and simple flash card app">
-    <meta itemprop="image" content="https://flashee.lilley.io/img/icons/android-chrome-512x512.png">
+    <meta itemprop="image" content="https://flashee.lilley.io/flashee-social.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
