--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Flashee</title>
+    <!-- Social tags -->
+    <meta property="og:url" content="https://flashee.lilley.io" />
+    <meta property="og:site_name" content="Flashee" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Flashee" />
+    <meta property="og:image" content="https://flashee.lilley.io/assets/img/flashee-social.png" />
+    <meta property="og:description" content="The free and simple flash card app" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="https://flashee.lilley.io" />
+    <meta name="twitter:title" content="Flashee" />
+    <meta name="twitter:description" content="The free and simple flash card app" />
+    <meta name="twitter:creator" content="@mklilley" />
+    <meta
+      name="twitter:image:src"
+      content="https://flashee.lilley.io/assets/img/flashee-social.png"
+    />
+    <meta itemprop="name" content="Flashee" />
+    <meta itemprop="description" content="The free and simple flash card app" />
+    <meta itemprop="image" content="https://flashee.lilley.io/assets/img/flashee-social.png" />
   </head>
   <body>
     <div id="root"></div>
